Desarrollo de componente Login y Register con sus estilos correspondientes, implementación de la librería (react-router-dom)

--- a/src/components/public/navbar/Navbar.css
+++ b/src/components/public/navbar/Navbar.css
@@ -25,7 +25,7 @@
   height: auto;
 }
 
-.search-container a {
+.btn-navbar {
   background: #e6e8ec;
   border-radius: 90px;
   text-decoration: none;
