Migración a NextJS y modularización del CSS

--- a/app/components/footer/Footer.module.css
+++ b/app/components/footer/Footer.module.css
@@ -34,13 +34,14 @@
   font-weight: 300;
   display: block;
 }
-.footer-logo {
-  display: flex;
-  align-items: center;
+
+.footer-col:has(img) {
+  align-content: center;
+  justify-items: center;
 }
+
 .footer-col img {
   width: 100%;
-  height: fit-content;
 }
 
 .footer-bottom {
