--- a/app/components/larger-width card/LargerWidthCard.module.css
+++ b/app/components/larger-width card/LargerWidthCard.module.css
@@ -1,8 +1,9 @@
 .card {
+  position: relative;
   background: #fff;
   border-radius: 20px;
   border: 1px solid #b1b5c3;
-  width: 240px;
+  width: 100%;
   height: 380px;
   overflow: hidden;
 }
@@ -48,9 +49,9 @@
 }
 
 .card .product-add {
-  position: relative;
-  bottom: 20%;
-  left: 70%;
+  position: absolute;
+  bottom: 2.8rem;
+  right: 1rem;
   background: #353945;
   width: 3rem;
   height: 3rem;
@@ -61,10 +62,6 @@
   align-items: center;
 }
 
-.card .product-add:hover {
-  cursor: pointer;
-}
-
-.product-info > * {
+.card .product-info > * {
   margin-bottom: 1.25rem;
 }
