--- a/app/components/navbar/Navbar.module.css
+++ b/app/components/navbar/Navbar.module.css
@@ -1,15 +1,21 @@
 .navbar {
   background: #fff;
   width: 100%;
+  max-width: 1200px;
   height: 6rem;
-  padding: 1rem 6rem;
+  padding: 1rem 0;
   display: flex;
   align-items: center;
+  justify-self: center;
   gap: 2rem;
 }
 
 .logo {
   display: flex;
+  height: 100%;
+}
+
+.logo img {
   height: 100%;
 }
 
@@ -30,9 +36,15 @@
   border-radius: 90px;
   text-decoration: none;
   color: #333;
-  padding: 1.5rem 1rem;
+  padding: 1.5rem;
   display: flex;
   align-items: center;
+  font-weight: bold;
+  gap: 0.25rem;
+}
+
+.btn-navbar img {
+  width: 1rem;
 }
 
 .divider {
